Fixing logo button shifts

--- a/css/billing.css
+++ b/css/billing.css
@@ -21,10 +21,6 @@ body {
     box-sizing: border-box;
 }
 
-.teacher-navbar .navbar-logo {
-    position: relative;
-    margin: 0;
-}
 
 .teacher-navbar .navbar-language-slot {
     display: flex;
